--- a/languages/git-updater-federation.pot
+++ b/languages/git-updater-federation.pot
@@ -2,14 +2,14 @@
 # This file is distributed under the MIT.
 msgid ""
 msgstr ""
-"Project-Id-Version: Git Updater - Federation 0.2.0\n"
+"Project-Id-Version: Git Updater - Federation 0.2.3\n"
 "Report-Msgid-Bugs-To: https://github.com/afragen/git-updater-federation/issues\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2025-01-29T14:43:36+00:00\n"
+"POT-Creation-Date: 2025-02-02T16:38:16+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.11.0\n"
 "X-Domain: git-updater-federation\n"
@@ -36,25 +36,20 @@ msgstr ""
 
 #: src/Federation/Repo_List_Table.php:62
 #: src/Federation/Settings.php:37
-msgid "Federated"
+msgid "Listing"
 msgstr ""
 
-#: src/Federation/Repo_List_Table.php:63
-#: src/Federation/Settings.php:38
-msgid "Defederated"
-msgstr ""
-
-#: src/Federation/Repo_List_Table.php:211
+#: src/Federation/Repo_List_Table.php:210
 #: src/Federation/Settings.php:183
 msgid "Type"
 msgstr ""
 
-#: src/Federation/Repo_List_Table.php:212
+#: src/Federation/Repo_List_Table.php:211
 #: src/Federation/Settings.php:195
 msgid "URI"
 msgstr ""
 
-#: src/Federation/Repo_List_Table.php:257
+#: src/Federation/Repo_List_Table.php:256
 msgid "Delete"
 msgstr ""
 
@@ -63,12 +58,12 @@ msgid "Items would go to edit when we write that code."
 msgstr ""
 
 #: src/Federation/Repo_List_Table.php:440
-msgid "Federation List Table"
+msgid "Update Repository List Table"
 msgstr ""
 
 #: src/Federation/Settings.php:121
 #: src/Federation/Settings.php:176
-msgid "Federation"
+msgid "Repository Listing"
 msgstr ""
 
 #: src/Federation/Settings.php:202
@@ -76,5 +71,5 @@ msgid "Ensure proper URI for federated Update API server."
 msgstr ""
 
 #: src/Federation/Settings.php:230
-msgid "Add URI for Git Updater Update API Servers for federation here."
+msgid "Add URI for Git Updater Update API Servers for listing here."
 msgstr ""
